objects/DMAPP__DM_Decision_Criterion_Rank__c.object
<CustomObject>
    <description>DEPRECATED - DO NOT USE</description>
    <fields>
        <fullName>DMAPP__Computed_Rank__c</fullName>
        <formula>CASE( DMAPP__Importance__c, 
&quot;Unknown&quot;, 1,
&quot;Low&quot;,2,
&quot;Medium&quot;,4,
&quot;High&quot;,8,
&quot;Critical&quot;,16,
0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Computed Rank</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__DM_Decision_Criterion__c</fullName>
        <label>DM Decision Criterion</label>
        <referenceTo>DMAPP__DM_Decision_Criterion__c</referenceTo>
        <relationshipName>DM_Decision_Criterion_Ranks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DMAPP__DM_Opportunity_Contact_Extra__c</fullName>
        <label>DM Opportunity Contact Extra</label>
        <referenceTo>DMAPP__DM_Opportunity_Contact_Extra__c</referenceTo>
        <relationshipName>DM_Decision_Criterion_Ranks</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DMAPP__DealmakerID__c</fullName>
        <description>An external ID used for Dealmaker</description>
        <externalId>true</externalId>
        <label>DealmakerID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DMAPP__Importance__c</fullName>
        <label>Importance</label>
        <picklist>
            <picklistValues>
                <fullName>Unknown</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Critical</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DMAPP__Rank__c</fullName>
        <label>Rank</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>ZZ DM Decision Criterion Rank</label>
    <listViews>
        <fullName>DMAPP__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>DM Decision Criterion Rank Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DM Decision Criterion Ranks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>